--- a/Dockerfile.kulitta.gpu
+++ b/Dockerfile.kulitta.gpu
@@ -5,7 +5,7 @@ MAINTAINER berlius <berlius52@yahoo.com>
 # Install some dependencies
 RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 575159689BEFB442
 RUN echo 'deb http://download.fpcomplete.com/ubuntu trusty main'|sudo tee /etc/apt/sources.list.d/fpco.list
-RUN apt-get update & apt-get upgrade & apt-get install -y stack
+RUN sudo apt-get update & apt-get install -y stack
 
 RUN wget https://www.haskell.org/platform/download/2014.2.0.0/haskell-platform-2014.2.0.0-unknown-linux-x86_64.tar.gz
 RUN tar xvf haskell-platform-2014.2.0.0-unknown-linux-x86_64.tar.gz
