--- a/Dockerfile.kulitta.gpu
+++ b/Dockerfile.kulitta.gpu
@@ -10,7 +10,7 @@ MAINTAINER berlius <berlius52@yahoo.com>
 #RUN sudo apt-get install -y software-properties-common
 
 RUN sudo add-apt-repository -y ppa:hvr/ghc
-RUN apt-get update
+RUN sudo apt-get update
 RUN sudo apt-get install -y cabal-install-1.22 ghc-7.8.3
 
 #RUN wget https://www.haskell.org/platform/download/2014.2.0.0/haskell-platform-2014.2.0.0-unknown-linux-x86_64.tar.gz
