--- a/Dockerfile.kulitta.gpu
+++ b/Dockerfile.kulitta.gpu
@@ -9,6 +9,8 @@ MAINTAINER berlius <berlius52@yahoo.com>
 
 #RUN sudo apt-get install -y software-properties-common
 
+RUN cd sharedfolder
+
 RUN sudo add-apt-repository -y ppa:hvr/ghc
 RUN sudo apt-get update
 RUN sudo apt-get install -y cabal-install-1.22 ghc-7.8.3
@@ -23,13 +25,13 @@ ENV export PATH=~/.cabal/bin:/opt/cabal/1.22/bin:/opt/ghc/7.8.3/bin:$PATH
 RUN cabal update
 RUN cabal install Euterpea
 
-RUN git clone https://github.com/Euterpea/HSoM
+RUN if [ !-d HSoM ]; then git clone https://github.com/Euterpea/HSoM
 RUN cd HSoM
 RUN cabal install
-RUN cd..
+RUN cd ..
 
 # Install Kulitta
-RUN git clone https://github.com/donya/Kulitta
+RUN if [ !-d Kulitta ]; then git clone https://github.com/donya/Kulitta
 RUN cd Kulitta
 RUN cabal install
 
