--- a/Dockerfile.kulitta.gpu
+++ b/Dockerfile.kulitta.gpu
@@ -3,9 +3,9 @@ FROM berlius/artificial-intelligence-gpu
 MAINTAINER berlius <berlius52@yahoo.com>
 
 # Install some dependencies
-RUN sudo add-apt-repository -y ppa:hvr/ghc
-RUN sudo apt-get update
-RUN sudo apt-get install -y cabal-install-1.22 ghc-7.10.3
+RUN add-apt-repository -y ppa:hvr/ghc
+RUN apt-get update
+RUN apt-get install -y cabal-install-1.22 ghc-7.10.3
 
 # Updating environment variables
 ENV PATH=~/.cabal/bin:/opt/cabal/1.22/bin:/opt/ghc/7.10.3/bin:$PATH
