--- a/Generative-Latent-Optimization-Tensorflow/Dockerfile.gpu
+++ b/Generative-Latent-Optimization-Tensorflow/Dockerfile.gpu
@@ -6,7 +6,7 @@ RUN apt-get update && apt-get install -y \
     python-scipy \
     python-numpy \
     python-imaging \
-    lxterminal
+    git
     
 RUN pip install h5py \
                 progressbar \
